--- a/src/components/CategoryForm/CategoryForm.scss
+++ b/src/components/CategoryForm/CategoryForm.scss
@@ -21,7 +21,7 @@
         background-color: $secondary-color;
         margin: 0 auto;
         padding: 1rem;
-        box-shadow: rgba(0, 34, 91, 0.11) 0px 2px 10px 0px;
+        @include box-shadow;
         margin-top: 1rem;
         margin-bottom: 1rem;
         
