--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -7,21 +7,59 @@
 .hero{
     width: 100%;
     position: relative;
+    overflow: hidden;
 
-    &__container{
-       position: absolute;
-       top: 5px;
-       width: 50%;
-       padding: 1rem;
+    &__slide-container{
+       width: 200%;
+    //    padding: 1rem;
+       @include flex-center(row);
+       transition: transform 1s ease-in-out;
+      
     }
+    &__slide {
+        flex: 0 0 50%; /* Each slide takes up 50% width */
+        position: relative;
+        opacity: 0; /* Start with slides being invisible */
+        transition: opacity 1s ease-in-out; /* Smooth opacity change */
+      }
+    // &__wrap{
+    //     width: 100%;
+    // }
     &__image{
         width: 100%;
+        object-fit: cover;
 
     }
+    &__text-box{
+        width: 45%;
+        position: absolute;
+        top: 75px;
+        left: 20px;
+        color: $secondary-color;
+        z-index: 10;
+    }
     &__title{
-        @include title-font-mob;
+        @include heading-font-mob;
+        font-weight: 700;
+        padding-bottom: 1rem;
+
         @include tablet{
-            @include title-font-tab;
+            @include heading-font-tab;
         }
     }
+    &__sub{
+        @include body-font-mob;
+        
+        @include tablet{
+            @include body-font-tab;
+        }
+
+    }
 }
+.hero__slide.current-slide {
+    opacity: 1; /* Make the current slide visible */
+  }
+  
+  .hero__slide.next-slide {
+    opacity: 0; /* Next slide is hidden until active */
+  }
