--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -86,3 +86,6 @@
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
 }
+@mixin box-shadow{
+  box-shadow: rgba(0, 34, 91, 0.11) 0px 2px 10px 0px;
+}
