--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -64,7 +64,7 @@
   font-weight: 500;
 
 }
-@mixin tags-font-mob{
+@mixin label-font{
   font-size: 1rem;
   font-family: 'Lexend';
   font-weight: 500;
