--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -3,62 +3,61 @@
 @use '../../styles/partials/variables' as *;
 @use '../../styles/partials/typography' as *;
 
-.category{
-    width: 100%;
-    padding: 1rem;
 
-    &__container{
+.card{
+    width: 100%;
+    padding-top: 5rem;
+    background-color: aquamarine;
+    // background-color: red;
+    @include tablet{
+        height: 100vh;
+        padding-top: 10rem;
+    }
+
+    &__carousel{
+        width: 300px;
+        height: 300px;
+        background-color: $secondary-color;
         @include flex-center(column);
+        @include box-shadow;
+        border-radius: 15px ;
 
         @include tablet{
             width: 100%;
-            @include flex-center(row);
-            justify-content: space-between;
         }
-    }
-    &__box{
-        @include flex-center(row);
-        justify-content: space-between;
-        align-items: center;
-        border: 2px solid $primary-color;
-        border-radius: 15px;
-        height: 100px;
-        margin-top: 1rem;
-        padding-left: 2rem;
-        padding-right: 2rem;
-
-        @include tablet{
-            width: 45%;
+    
+        @include desktop{
+            // background-color: aqua;
+            width: 380px;
+            height: 400px;
         }
-    }
-    &__frame{
-        @include flex-center(row);
+    
+    }     
+   
+    &__image-frame{
         width: 100%;
-        justify-content: space-between;
-        align-items: center;
-        padding-left: 2rem;
-        padding-right: 2rem;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        
+        @include desktop{
+            height: 70%;
+            // background-color: aquamarine;
+        }
+
     }
     &__image{
-        width: 40px;
-    }
-    &__start{
-        @include body-font-mob;
-        @include tablet{
-            @include body-font-tab;
-        }
-       
-    }
-    &__btn{
-        width: 150px;
-        padding: 5px 20px 5px 20px;
-        background-color: $secondary-color;
-        border: 2px solid $primary-color;
-        border-radius: 0.938rem;
+        width: 100%;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
 
-        &:hover{
-            background-color: $primary-color;
-            color: $secondary-color;
+        @include desktop{
+            height: 100%;
         }
+      
+    }
+    &__title-box{
+        width: 100%;
+        padding-top: 1rem;
+        text-align: center;
     }
 }
