--- a/src/pages/StressCategoryPage/StressCategoryPage.scss
+++ b/src/pages/StressCategoryPage/StressCategoryPage.scss
@@ -54,8 +54,21 @@
         }
     }
 }
-// .category__frame{
-    
+.category{
 
-   
-// }
+    @include tablet{
+        @include flex-center(row);
+    }
+   &__btn{
+    width: 19.75rem;
+    padding: 10px 15px 10px 15px;
+    background-color: $secondary-color;
+    border: 2px solid $primary-color;
+    border-radius: 15px;
+
+    &:hover{
+        background-color: $primary-color;
+        color: $secondary-color;
+    }
+   }
+}
