--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -7,7 +7,7 @@
 .card{
     width: 100%;
     padding-top: 5rem;
-    background-color: aquamarine;
+    // background-color: aquamarine;
     // background-color: red;
     @include tablet{
         height: 100vh;
