--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -6,19 +6,42 @@
 
 .card{
     width: 100%;
+    height: 100vh;
     padding: 1rem;
 
+    &__frame{
+        width: 100%;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        @include flex-center(column);
+        align-items: center;
+        justify-content: center;
+      
+        @include tablet {
+            width: 80%;
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+    }
+
     &__container{
-        width: 80%;
+        width: 90%;
+        padding: 2rem;
         background-color: $secondary-color;
         @include box-shadow;
-        // border: 2px solid $primary-color;
         margin: 0 auto;
+       
 
         @include tablet{
+            width: 80%;
+            // padding-left: 5rem;
+            // padding-right: 5rem;
+        }
+        @include desktop{
             width: 60%;
-            padding-left: 5rem;
-            padding-right: 5rem;
+            // height: 31.25rem;
+            // padding-left: 5rem;
+            // padding-right: 5rem;
         }
        
     }
@@ -31,17 +54,23 @@
             @include heading-font-tab;
         }
     }
-    &__image-box{
-        width: 80%;
+    &__img-box{
+        width: 100%;
+        // height: 200px;
         margin: 0 auto;
-        border: 2px solid $primary-color;
     }
     &__image{
         width: 100%;
+        height: 100%;
     }
     &__quote{
-        padding-left: 1rem;
-        padding-right: 1rem;
+         @include body-font-mob;
+
+         @include tablet{
+            @include body-font-tab;
+         }
+        // padding-left: 1rem;
+        // padding-right: 1rem;
     }
     &__musicLink{
         width: 100%;
@@ -62,11 +91,12 @@
     &__list{
         list-style: none;
     }
-    &__radioBox{
-        width: 100%;
+    &__linkBox{
+        width: 60%;
         @include flex-center(row);
         justify-content: space-between;
     }
+    
     &__youTubeLink{
         color: $inspireBlack-color;
         @include body-font-mob;
@@ -76,17 +106,21 @@
         }
     }
     &__btn-box{
-        width: 80%;
+        width: 90%;
         @include flex-center(row);
         justify-content: space-between;
         margin: 0 auto;
+
+        @include tablet {
+            width: 70%;
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
     }
     &__btn{
-        width: 150px;
+        width: 50%;
         padding: 12px 15px 12px 15px;
         margin-top: 2rem;
-        margin-left: 2rem;
-        background-color: $secondary-color;
         border: 2px solid $primary-color;
         border-radius: 15px;
         @include box-shadow;
@@ -94,6 +128,18 @@
             background-color: $primary-color;
             color: $secondary-color;
         }
+        @include tablet{
+            width: 35%;
+        }
+    }
+    &__btn-bck{
+        @extend .card__btn;
+        margin-right: 0.5rem;
+    }
+    &__quote-caption{
+        font-size: 1rem;
+        font-weight: 600;
+        font-family: 'lexend';
     }
     &__quote-wrap{
         @include flex-center(row);
@@ -108,5 +154,20 @@
             @include body-font-tab;
         }
     }
+    &__plug{
+        @include body-font-mob;
+
+        @include tablet{
+            @include body-font-tab;
+        }
+    }
    
+}
+.card__icon{
+    border: $primary-color;
+    width: 20%;
+    height: 10%;
+    @include tablet{
+        width: 30px;
+    }
 }
