--- a/src/pages/LoginPage/LoginPage.scss
+++ b/src/pages/LoginPage/LoginPage.scss
@@ -50,11 +50,15 @@
     &__form{
         background-color: $secondary-color;
         @include box-shadow;
-        width: 40%;
+        width: 90%;
         margin: 0 auto;
         margin-top: 2rem;
         margin-bottom: 2rem;
         padding: 1rem;
+
+        @include tablet{
+            width: 40%;
+        }
     }
     &__form-box{
         @include flex-center(column);
