--- a/src/pages/StressCategoryPage/StressCategoryPage.scss
+++ b/src/pages/StressCategoryPage/StressCategoryPage.scss
@@ -9,11 +9,21 @@
     ////15px ---0.938
     
     @include tablet{
-        @include flex-center(row);
+        width: 80%;
+        margin: 0 auto;
     }
    
+     &__block{
+        width: 100%;
+        @include box-shadow;
+        @include tablet{
+            @include flex-center(row);
+        }
+     }
 
     &__box{
+        // background-color: #9EBC7E;
+       padding: 1rem;
 
         @include tablet{
             width: 50%;
@@ -21,7 +31,8 @@
        
     }
     &__image-container{
-        border-radius: 0.938rem;
+        // border-radius: 0.938rem;
+        width: 100%;
         margin-top: 1rem;
 
         @include tablet{
@@ -32,7 +43,7 @@
     }
     &__image{
         width: 100%;
-        border-radius: 0.938rem;
+        // border-radius: 0.938rem;
     }
     &__title{
         color: $inspireBlack-color;
@@ -55,12 +66,15 @@
     }
 }
 .category{
-
+    padding: 1rem;
+    @include flex-center(row);
+    justify-content: space-between;
     @include tablet{
-        @include flex-center(row);
+       width: 80%;
+       margin: 0 auto;
     }
    &__btn{
-    width: 19.75rem;
+    width: 10rem;
     padding: 10px 15px 10px 15px;
     background-color: $secondary-color;
     border: 2px solid $primary-color;
@@ -69,6 +83,13 @@
     &:hover{
         background-color: $primary-color;
         color: $secondary-color;
+    }
+   }
+   &__start{
+    @include body-font-mob;
+
+    @include tablet{
+        @include body-font-tab;
     }
    }
 }
