--- a/src/components/PlayIcon/PlayIcon.scss
+++ b/src/components/PlayIcon/PlayIcon.scss
@@ -3,7 +3,10 @@
 @use '../../styles/partials/variables' as *;
 @use '../../styles/partials/typography' as *;
 
-
+.play-icon{
+    color: red;
+}
 svg{
     color: $inspireBlack-color;
+    width: 550px;
 }
