--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,3 +2,4 @@ $primary-color: #59881A;
 $secondary-color:#ffff;
 $inspireBlack-color:#373A34;
 $inspireRed-color: #C94515;
+$inspireGrey-color: #EDF1E8;
