--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -7,11 +7,15 @@
 .card{
     width: 100%;
     padding-top: 5rem;
-    // background-color: aquamarine;
-    // background-color: red;
+   
     @include tablet{
         height: 100vh;
         padding-top: 10rem;
+        @include body-padding-tab;
+    }
+    &__heading{
+        text-align: center;
+        font-family: 'Lexend';
     }
 
     &__carousel{
@@ -24,6 +28,7 @@
 
         @include tablet{
             width: 100%;
+            height: 400px;
         }
     
         @include desktop{
@@ -59,5 +64,12 @@
         width: 100%;
         padding-top: 1rem;
         text-align: center;
+    }
+    &__title{
+        @include body-font-mob;
+    }
+    &__link{
+        text-decoration: none;
+        color: $inspireBlack-color;
     }
 }
