--- a/src/components/CategoryForm/CategoryForm.scss
+++ b/src/components/CategoryForm/CategoryForm.scss
@@ -15,26 +15,33 @@
     
     &__container{
         width: 90%;
-        height: 40%;
+        // height: 80%;
         border-radius: 15px;
-        border: 2px solid $primary-color; 
+        background-color: $inspireGrey-color;
+        padding-bottom: 5rem;
+        // border: 2px solid $primary-color; 
         margin: 0 auto;
 
         
         @include tablet{
             width: 80%;
-            // height: 60%;
+            height: 60%;
          }
     }
 
     &__form{
         width: 80%;
+        // height: 40%;
         background-color: $secondary-color;
         margin: 0 auto;
         padding: 1rem;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
         @include box-shadow;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+       
+       
         
 
         &-label{
@@ -55,13 +62,14 @@
     &__header{
         width: 100%;
         height: 5rem;
-        background-color: $primary-color;
+        background-color: $inspireGrey-color;;
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
+        border-bottom: 2px solid $primary-color;
 
     }
     &__txt{
-        color: $secondary-color;
+        color: $primary-color;
         padding: 1rem;
     }
     &__quote{
