--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -9,20 +9,20 @@
     height: 100vh;
     padding: 1rem;
 
-    &__frame{
-        width: 100%;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        @include flex-center(column);
-        align-items: center;
-        justify-content: center;
+    // &__frame{
+    //     width: 100%;
+    //     padding-left: 1rem;
+    //     padding-right: 1rem;
+    //     @include flex-center(column);
+    //     align-items: center;
+    //     justify-content: center;
       
-        @include tablet {
-            width: 80%;
-            padding-left: 2rem;
-            padding-right: 2rem;
-        }
-    }
+    //     @include tablet {
+    //         width: 80%;
+    //         padding-left: 2rem;
+    //         padding-right: 2rem;
+    //     }
+    // }
 
     &__container{
         width: 90%;
@@ -30,6 +30,7 @@
         background-color: $secondary-color;
         @include box-shadow;
         margin: 0 auto;
+        position: relative;
        
 
         @include tablet{
@@ -45,6 +46,26 @@
         }
        
     }
+    &__circle-frame{
+        width: 90%;
+        margin: 0 auto;
+        // height: 20rem;
+
+        @include tablet{
+            width: 70%;
+            height: 30rem;
+           
+        }
+       
+    }
+    &__circle{
+        width: 100%;
+
+        @include tablet{
+           height: 100%;
+        }
+       
+    }
     &__caption{
         padding: 1rem;
         text-align: center;
@@ -54,23 +75,37 @@
             @include heading-font-tab;
         }
     }
-    &__img-box{
-        width: 100%;
-        // height: 200px;
+    &__imgwrap{
+        width: 60%;
+        height: 15.625rem;
         margin: 0 auto;
+        margin-bottom: 1rem;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 40%;
+        left: 5.625rem;
+        @include tablet{
+            width: 50%;
+            height:  400px;
+            bottom: 35%;
+            left: 12.5rem;
+        }
     }
-    &__image{
+    &__img{
         width: 100%;
         height: 100%;
+       border-radius: 50%;
     }
     &__quote{
-         @include body-font-mob;
+        padding-top: 1rem;
 
-         @include tablet{
+     }
+    &__quote-text{
+        @include body-font-mob;
+
+        @include tablet{
             @include body-font-tab;
          }
-        // padding-left: 1rem;
-        // padding-right: 1rem;
     }
     &__musicLink{
         width: 100%;
@@ -82,19 +117,29 @@
     }
     &__musicBar{
         width: 100%;
-        // height: 15px
     }
     &__item{
         @include flex-center(row);
         justify-content: space-between;
+        align-items: center;
     }
     &__list{
         list-style: none;
+        @include body-font-mob;
+
+        @include tablet{
+            @include body-font-tab;
+        }
     }
     &__linkBox{
-        width: 60%;
+        width: 70%;
         @include flex-center(row);
         justify-content: space-between;
+        align-items: center;
+
+        @include tablet{
+            width: 50%;
+        }
     }
     
     &__youTubeLink{
@@ -161,11 +206,14 @@
             @include body-font-tab;
         }
     }
+    &__play{
+        width: 50px;
+    }
    
 }
 .card__icon{
     border: $primary-color;
-    width: 20%;
+    width: 35px;
     height: 10%;
     @include tablet{
         width: 30px;
