--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -8,6 +8,8 @@
     width: 100%;
     position: relative;
     overflow: hidden;
+    background-position: center;
+    background-size: cover;
 
     @include tablet{
         height: 100vh;
@@ -15,40 +17,42 @@
 
     &__slide-container{
        width: 200%;
-    //    padding: 1rem;
        @include flex-center(row);
        transition: transform 1s ease-in-out;
       
     }
     &__slide {
-        flex: 0 0 50%; /* Each slide takes up 50% width */
+        flex: 0 0 50%; 
         position: relative;
-        opacity: 0; /* Start with slides being invisible */
-        transition: opacity 1s ease-in-out; /* Smooth opacity change */
+        opacity: 0; 
+        transition: opacity 1s ease-in-out; 
       }
-    // &__wrap{
-    //     width: 100%;
-    // }
+   
     &__image{
         width: 100%;
         object-fit: cover;
 
     }
     &__text-box{
-        width: 45%;
+        width: 70%;
         position: absolute;
-        top: 75px;
+        top: 4.688rem;
         left: 20px;
         color: $secondary-color;
         z-index: 10;
+
+        @include tablet{
+            width: 45%; 
+            top: 4.375rem;
+            padding-left: 1.5rem;
+        }
     }
     &__title{
-        @include heading-font-mob;
-        font-weight: 700;
+        @include title-font-mob;
         padding-bottom: 1rem;
 
         @include tablet{
-            @include heading-font-tab;
+            @include title-font-tab;
         }
     }
     &__sub{
@@ -74,17 +78,12 @@
     padding-bottom: 5rem;
     padding-left: 2rem;
     padding-right: 2rem;
-
-    // @include desktop{
-    //     @include flex-center(row);
-    //     justify-content: space-between;
-    // }
    
 
  }
-//  .react-multi-carousel-item{
-//     @include desktop{
-//         width: 500px;
-//         margin-left: 1rem;
-//     }
-//  }
+ .react-multi-carousel-item{
+    @include tablet{
+        width: 350px;
+        margin-left: 1rem;
+    }
+ }
