--- a/src/pages/StreakTrackPage/StreakTrackPage.scss
+++ b/src/pages/StreakTrackPage/StreakTrackPage.scss
@@ -13,6 +13,7 @@
       padding: 1rem;
       background-color: $secondary-color;
       @include box-shadow;
+      margin-top: 2rem;
 
       @include tablet{
         width: 80%;
@@ -36,13 +37,23 @@
         text-align: center;
     }
     &__box{
+        width: 100%;
         @include flex-center(row);
+        justify-content: center;
         align-items: center;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
        
     }
+    &__number{
+        text-align: center;
+    }
     &__fire{
-        width: 20px;
+        width: 1.25rem;
         animation: bounce 1s infinite ease-in-out;
+    }
+    &__share{
+        text-align: center;
     }
 }
 @keyframes bounce {
