--- a/src/components/PlayIcon/PlayIcon.scss
+++ b/src/components/PlayIcon/PlayIcon.scss
@@ -4,7 +4,7 @@
 @use '../../styles/partials/typography' as *;
 
 .play-icon{
-    color: red;
+    color: #ff0000;
 }
 svg{
     color: $inspireBlack-color;
