--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -2,25 +2,25 @@
 
   @font-face {
     font-family: 'lexend-light';
-    src: url(../../assets/fonts/Lexend-Light.ttf) format("tff");
+    src: url(../../assets/fonts/Lexend-Light.ttf) format("tff1");
     font-weight: 300;
   }
   @font-face {
     font-family: 'Lexend-Regular';
-    src: url(../../assets/fonts/Lexend-Regular.ttf) format("tff");
+    src: url(../../assets/fonts/Lexend-Regular.ttf) format("tff2");
     font-weight: 300;
   }
 
   @font-face {
     font-family: 'Lexend-Medium';
-    src: url(../../assets/fonts/Lexend-Medium.ttf) format("tff");
+    src: url(../../assets/fonts/Lexend-Medium.ttf) format("tff1");
     font-weight: 500;
     
   }
  
   @font-face {
     font-family: 'Lexend-Bold';
-    src: url(../../assets/fonts/Lexend-Bold.ttf) format("tff");
+    src: url(../../assets/fonts/Lexend-Bold.ttf) format("tff2");
     font-weight: 700;
     
   }
