--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -16,6 +16,11 @@
     &__heading{
         text-align: center;
         font-family: 'Lexend';
+        @include heading-font-mob;
+
+        @include tablet{
+            @include heading-font-tab;
+        }
     }
 
     &__carousel{
@@ -32,7 +37,6 @@
         }
     
         @include desktop{
-            // background-color: aqua;
             width: 380px;
             height: 400px;
         }
@@ -46,7 +50,6 @@
         
         @include desktop{
             height: 70%;
-            // background-color: aquamarine;
         }
 
     }
