--- a/src/components/FaqQuestion/FaqQuestion.scss
+++ b/src/components/FaqQuestion/FaqQuestion.scss
@@ -5,7 +5,6 @@
 
 .faq__header{
     width: 100%;
-    // height: 8rem;
     padding: 1rem;
     background-color: $secondary-color;
     @include box-shadow;
@@ -16,10 +15,10 @@
     width: 100%;
     @include flex-center(row);
     margin-top: 1rem;
-    // justify-content: space-between;
   }
 .faq__answer{
     padding: 1rem;
+    @include body-font-mob;
   }
 .faq__question{
     @include heading-font-mob;
