--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -25,8 +25,6 @@
         background-position: center;
         overflow: hidden;
       }
-
-
    
     &__image{
         width: 100%;
@@ -58,9 +56,11 @@
     }
     &__sub{
         @include body-font-mob;
+        color: $secondary-color;
         
         @include tablet{
             @include body-font-tab;
+            color: $secondary-color;
         }
 
     }
