--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -17,6 +17,10 @@
         width: 90%;
         background-color: $secondary-color;
         margin-bottom: 1rem;
+        position: relative;
+        left: -100%;
+        opacity: 0;
+        animation: slideIn 1s ease-out forwards;
         @include box-shadow;
         @include tablet{
             @include flex-center(row);
@@ -25,6 +29,17 @@
           
         }
        
+    }
+
+    @keyframes slideIn {
+        from {
+            left: -100%;
+            opacity: 0;
+        }
+        to {
+            left: 0;
+            opacity: 1;
+        }
     }
     &__heading{
         @include title-font-mob;
@@ -108,6 +123,10 @@
     }
     &__text{
         color: $inspireRed-color;
-        @include body-font-mob;
+        font-size: 0.75rem;
+        line-height: 15px;
+        font-weight: 500; 
+        font-family: 'Lexend-regular';
     }
 }
+
