--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -42,11 +42,13 @@
   line-height: 15px;
   font-weight: 500; 
   font-family: 'Lexend-regular';
+  color: $inspireBlack-color;
 }
 @mixin body-font-tab {
   font-size: 1.25rem;
   line-height: 1.25rem;
   font-family: 'Lexend-regular';
+  color: $inspireBlack-color;
 
 }
 
@@ -55,6 +57,7 @@
   line-height: 38px;
   font-weight: 600; 
   font-family: 'Lexend';
+ 
 }
 
 @mixin title-font-tab {
@@ -63,22 +66,25 @@
   font-family: 'Lexend';
 }
 @mixin heading-font-mob {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   line-height: 23px;
-  font-weight: 500;
+  font-weight: 700;
   font-family: 'Lexend';
+  color: $inspireBlack-color;
 
 }
 @mixin heading-font-tab {
-  font-size: 1.5rem;
+  font-size: 2rem;
   line-height: 1.875rem;
-  font-weight: 500;
-
+  font-weight: 700;
+  font-family: 'Lexend';
+  color: $inspireBlack-color;
 }
 @mixin label-font{
   font-size: 1rem;
   font-family: 'Lexend';
   font-weight: 500;
+  color: $inspireBlack-color;
 }
 @mixin input-font-mob {
   font-size: 1rem;
