--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -64,5 +64,67 @@
         &:hover{
             border-bottom: 2px solid $secondary-color;
         }
+       
+    }
+    &__nav-mob{
+        height: 100%;
+        width: 100%;
+        background-color: $primary-color;
+        position: fixed;
+        right: 0;
+        top: 0;
+        gap: 1.5rem;
+        z-index: 201;
+       
+        @include tablet{
+            display: none;
+        }
+    }
+    &__mobNav{
+        padding-top: 6rem;
+        @include flex-center(column);
+        justify-content: space-between;
+     }
+     &__list-mob{
+        height: 100px;
+        // width: 100%;
+        margin-top: 2rem;
+        list-style: none;
+        @include flex-center(column);
+        justify-content: center;
+        align-items: center;
+        padding-left: 0;
+    }
+    &__li{
+        text-align: center;
+        margin-bottom: 40px;
+       
+        cursor: pointer;
+        height: 50px;
+        width: 200px;
+
+        &:hover{
+            width: 50px;
+            border-bottom: 2px solid $secondary-color;
+            
+        }
+    }
+    &__menu-btn{
+        background-color: transparent;
+        border: none;
+    
+        @include tablet{
+            display: none;
+        }
+    }
+    &__close-btn{
+        margin: 0 auto;
+        background-color: transparent;
+        border: none;
+        position: absolute;
+        top: 16px;
+        right: 40px;
+        z-index: 202;
+        cursor: pointer;
     }
 }
