--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -6,23 +6,7 @@
 
 .card{
     width: 100%;
-    height: 100vh;
     padding: 1rem;
-
-    // &__frame{
-    //     width: 100%;
-    //     padding-left: 1rem;
-    //     padding-right: 1rem;
-    //     @include flex-center(column);
-    //     align-items: center;
-    //     justify-content: center;
-      
-    //     @include tablet {
-    //         width: 80%;
-    //         padding-left: 2rem;
-    //         padding-right: 2rem;
-    //     }
-    // }
 
     &__container{
         width: 90%;
@@ -30,42 +14,22 @@
         background-color: $secondary-color;
         @include box-shadow;
         margin: 0 auto;
-        position: relative;
+        margin-bottom: 2.5rem;
+        margin-top: 2rem;
        
 
         @include tablet{
             width: 80%;
-            // padding-left: 5rem;
-            // padding-right: 5rem;
+            margin-bottom: 0;
+           
         }
         @include desktop{
             width: 60%;
-            // height: 31.25rem;
-            // padding-left: 5rem;
-            // padding-right: 5rem;
+            
         }
        
     }
-    &__circle-frame{
-        width: 90%;
-        margin: 0 auto;
-        // height: 20rem;
-
-        @include tablet{
-            width: 70%;
-            height: 30rem;
-           
-        }
-       
-    }
-    &__circle{
-        width: 100%;
-
-        @include tablet{
-           height: 100%;
-        }
-       
-    }
+   
     &__caption{
         padding: 1rem;
         text-align: center;
@@ -76,25 +40,16 @@
         }
     }
     &__imgwrap{
-        width: 60%;
+        width: 90%;
         height: 15.625rem;
         margin: 0 auto;
         margin-bottom: 1rem;
-        border-radius: 50%;
-        position: absolute;
-        bottom: 40%;
-        left: 5.625rem;
-        @include tablet{
-            width: 50%;
-            height:  400px;
-            bottom: 35%;
-            left: 12.5rem;
-        }
+       
     }
     &__img{
         width: 100%;
         height: 100%;
-       border-radius: 50%;
+   
     }
     &__quote{
         padding-top: 1rem;
@@ -160,6 +115,7 @@
             width: 70%;
             padding-left: 2rem;
             padding-right: 2rem;
+          
         }
     }
     &__btn{
