--- a/src/pages/SignUpPage/SignUpPage.scss
+++ b/src/pages/SignUpPage/SignUpPage.scss
@@ -7,8 +7,8 @@
 .signUp{
     width: 100%;
     padding: 1rem;
-    padding-top: 5rem;
-
+    padding-top: 2rem;
+    
     @include tablet{
         padding-left: 2rem;
         padding-right: 2rem;
@@ -20,13 +20,12 @@
         position: relative;
         left: -100%;
         opacity: 0;
+        margin: 0 auto;
         animation: slideIn 1s ease-out forwards;
         @include box-shadow;
         @include tablet{
             @include flex-center(row);
-            width: 70%;
-            margin: 0 auto;
-          
+            width: 70%; 
         }
        
     }
@@ -127,6 +126,9 @@
         line-height: 15px;
         font-weight: 500; 
         font-family: 'Lexend-regular';
+    }
+    &__acct{
+        color: $primary-color;
     }
 }
 
