--- a/src/pages/StressCategoryPage/StressCategoryPage.scss
+++ b/src/pages/StressCategoryPage/StressCategoryPage.scss
@@ -6,8 +6,8 @@
 .music{
     width: 100%;
     padding: 1rem;
-    padding-bottom: 5rem;
-    ////15px ---0.938
+    padding-top: 2rem;
+    padding-bottom: 2.5rem;
     
     @include tablet{
         width: 80%;
@@ -17,6 +17,8 @@
      &__block{
         width: 100%;
         @include box-shadow;
+        @include flex-center(column);
+        justify-content: space-between;
         @include tablet{
             @include flex-center(row);
         }
@@ -32,12 +34,14 @@
     }
     &__image-container{
         width: 100%;
+        height: 50%;
         margin-top: 1rem;
 
         @include tablet{
             width: 45%;
+            height: 0;
+            margin-top: 0;
         }
-      
        
     }
     &__image{
