--- a/src/components/CategoryForm/CategoryForm.scss
+++ b/src/components/CategoryForm/CategoryForm.scss
@@ -28,7 +28,7 @@
     }
 
     &__form{
-        width: 80%;
+        width: 90%;
         background-color: $secondary-color;
         margin: 0 auto;
         padding: 1rem;
@@ -76,6 +76,7 @@
         background-color: $secondary-color;
         border: 2px solid $primary-color;
         border-radius: 15px;
+        color: $inspireBlack-color;
     
         &:hover{
             background-color: $primary-color;
