--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -9,7 +9,7 @@
     padding: 1rem;
 
     &__container{
-        width: 90%;
+        // width: 90%;
         padding: 2rem;
         background-color: $secondary-color;
         @include box-shadow;
@@ -106,8 +106,9 @@
         }
     }
     &__btn-box{
-        width: 90%;
-        @include flex-center(row);
+        // width: 90%;
+        height: 100px;
+        @include flex-center(column);
         justify-content: space-between;
         margin: 0 auto;
 
@@ -115,15 +116,17 @@
             width: 70%;
             padding-left: 2rem;
             padding-right: 2rem;
+            @include flex-center(row);
           
         }
     }
     &__btn{
-        width: 50%;
+        // width: 50%;
         padding: 12px 15px 12px 15px;
         margin-top: 2rem;
         border: 2px solid $primary-color;
         border-radius: 15px;
+        background-color: $secondary-color;
         @include box-shadow;
         &:hover{
             background-color: $primary-color;
