--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -14,7 +14,7 @@
         background-color: $secondary-color;
         @include box-shadow;
         margin: 0 auto;
-        margin-bottom: 2.5rem;
+        // margin-bottom: 2.5rem;
         margin-top: 2rem;
        
 
@@ -111,6 +111,7 @@
         @include flex-center(column);
         justify-content: space-between;
         margin: 0 auto;
+        margin-bottom: 4rem;
 
         @include tablet {
             width: 70%;
