Carousel updated for mobile view

--- a/src/components/CategoryForm/CategoryForm.scss
+++ b/src/components/CategoryForm/CategoryForm.scss
@@ -19,6 +19,7 @@
         background-color: $inspireGrey-color;
         padding-bottom: 5rem;
         margin: 0 auto;
+        margin-top: 2rem;
 
         
         @include tablet{
