--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -77,17 +77,24 @@
   }
 
  .react-multi-carousel-list{
-    padding-top: 2rem;
-    padding-bottom: 5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    width: 90%;
+    margin-top: 2rem;
+    @include tablet{
+        width: 80%;
+
+    }
+    // padding-bottom: 5rem;
+    // padding-left: 2rem;
+    // padding-right: 2rem;
    
 
  }
  .react-multi-carousel-item{
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
     @include tablet{
         width: 350px;
-        margin-left: 1rem;
+        // margin-left: 1rem; /// i might remove this
     }
  }
  .carousel{
