--- a/src/pages/ProfilePage/ProfilePage.scss
+++ b/src/pages/ProfilePage/ProfilePage.scss
@@ -14,6 +14,7 @@
     @include box-shadow;
     margin: 0 auto;
     padding: 1rem;
+    margin-top: 2rem;
 
     @include tablet{
         width: 45%;
