--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -107,6 +107,7 @@
     &__menu-btn{
         background-color: transparent;
         border: none;
+        margin-right: 1rem;
     
         @include tablet{
             display: none;
