--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -1,78 +1,78 @@
-@use '../../styles/partials/global' as *;
-@use '../../styles/partials/mixins' as *;
-@use '../../styles/partials/variables' as *;
-@use '../../styles/partials/typography' as *;
+// @use '../../styles/partials/global' as *;
+// @use '../../styles/partials/mixins' as *;
+// @use '../../styles/partials/variables' as *;
+// @use '../../styles/partials/typography' as *;
 
 
-.card{
-    width: 100%;
-    padding-top: 5rem;
+// .carousel{
+//     width: 100%;
+//     padding-top: 5rem;
    
-    @include tablet{
-        height: 100vh;
-        padding-top: 10rem;
-        @include body-padding-tab;
-    }
-    &__heading{
-        text-align: center;
-        font-family: 'Lexend';
-        @include heading-font-mob;
+//     @include tablet{
+//         height: 100vh;
+//         padding-top: 10rem;
+//         @include body-padding-tab;
+//     }
+//     &__heading{
+//         text-align: center;
+//         font-family: 'Lexend';
+//         @include heading-font-mob;
 
-        @include tablet{
-            @include heading-font-tab;
-        }
-    }
+//         @include tablet{
+//             @include heading-font-tab;
+//         }
+//     }
 
-    &__carousel{
-        width: 300px;
-        height: 300px;
-        background-color: $secondary-color;
-        @include flex-center(column);
-        @include box-shadow;
-        border-radius: 15px ;
+//     &__carousel{
+//         width: 300px;
+//         height: 300px;
+//         background-color: $secondary-color;
+//         @include flex-center(column);
+//         @include box-shadow;
+//         border-radius: 15px ;
 
-        @include tablet{
-            width: 100%;
-            height: 400px;
-        }
+//         @include tablet{
+//             width: 100%;
+//             height: 400px;
+//         }
     
-        @include desktop{
-            width: 380px;
-            height: 400px;
-        }
+//         @include desktop{
+//             width: 380px;
+//             height: 400px;
+//         }
     
-    }     
+//     }     
    
-    &__image-frame{
-        width: 100%;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+//     &__image-frame{
+//         width: 100%;
+//         border-top-left-radius: 15px;
+//         border-top-right-radius: 15px;
         
-        @include desktop{
-            height: 70%;
-        }
+//         @include desktop{
+//             height: 70%;
+//         }
 
-    }
-    &__image{
-        width: 100%;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+//     }
+//     &__image{
+//         width: 100%;
+//         border-top-left-radius: 15px;
+//         border-top-right-radius: 15px;
 
-        @include desktop{
-            height: 100%;
-        }
+//         @include desktop{
+//             height: 100%;
+//         }
       
-    }
-    &__title-box{
-        width: 100%;
-        padding-top: 1rem;
-        text-align: center;
-    }
-    &__title{
-        @include body-font-mob;
-    }
-    &__link{
-        text-decoration: none;
-        color: $inspireBlack-color;
-    }
-}
+//     }
+//     &__title-box{
+//         width: 100%;
+//         padding-top: 1rem;
+//         text-align: center;
+//     }
+//     &__title{
+//         @include body-font-mob;
+//     }
+//     &__link{
+//         text-decoration: none;
+//         color: $inspireBlack-color;
+//     }
+// }
