--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -109,7 +109,7 @@
         }
     }
 
-    &__carousel{
+    &__frame{
         width: 300px;
         height: 300px;
         background-color: $secondary-color;
