--- a/src/components/CategoryForm/CategoryForm.scss
+++ b/src/components/CategoryForm/CategoryForm.scss
@@ -49,6 +49,9 @@
         &-input{
             padding-bottom: 1rem;
             margin-bottom: 1rem;
+            border: 2px solid $inspireBlack-color;
+            padding-top:  1rem;
+            padding-bottom: 2rem;
         }
 
     }
