--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -10,7 +10,7 @@
 
     &__container{
         padding: 2rem;
-        height: 700px;
+        // height: 700px;
         background-color: $secondary-color;
         @include box-shadow;
         margin: 0 auto;
@@ -29,19 +29,25 @@
     }
    
     &__caption{
-        padding: 1rem;
+        padding: 0.5rem;
         text-align: center;
         @include heading-font-mob;
 
         @include tablet{
             @include heading-font-tab;
+            padding: 1rem;
         }
     }
     &__imgwrap{
         width: 90%;
-        height: 15.625rem;
+        height: 10rem;
         margin: 0 auto;
         margin-bottom: 1rem;
+
+        @include tablet{
+            width: 80%;
+            height: 15.625rem;;
+        }
        
     }
     &__img{
@@ -112,11 +118,13 @@
         margin-bottom: 4rem;
 
         @include tablet {
-            width: 70%;
+            width: 80%;
             padding-left: 2rem;
             padding-right: 2rem;
             @include flex-center(row);
-          
+        }
+        @include desktop{
+            width: 90%;
         }
     }
     &__btn{
@@ -167,6 +175,7 @@
     }
     &__play{
         width: 50px;
+        height: 40px;
     }
    
 }
