--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -9,15 +9,17 @@
     padding: 1rem;
 
     &__wrap{
-        margin: 0 auto;
-        margin-top: 2rem;
+       
         @include tablet{
-            width: 80%; 
+            width: 80%;
+            margin: 0 auto;
+            margin-top: 2rem; 
         }
     }
 
     &__container{
         padding: 2rem;
+        width: 100%;
         // height: 700px;
         background-color: $secondary-color;
         @include box-shadow;
@@ -25,7 +27,6 @@
         // margin-top: 2rem;
 
         @include tablet{
-            width: 100%;
             height: auto;
             margin-bottom: 0;
            
@@ -168,7 +169,7 @@
     }
     &__quote-text{
         @include body-font-mob;
-        padding: 1rem;
+        // padding: 1rem;
 
         @include tablet{
             @include body-font-tab;
